fix overflow, fix constructor

--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,7 @@ body{
 	font-size: 1.5em;
 	font-family: 'Varela Round', sans-serif;
 	background-color: #8ed4f8;
+	overflow: hidden;
 }
 
 
